--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -20,8 +20,7 @@ environment=
     FILES_PATH="/files",
     SERVICE_NAME="meta-fuse",
     SERVICE_VERSION="1.0.0",
-    META_CORE_HTTP_PORT="9000",
-    LEADER_ELECTION_ENABLED="false"
+    META_CORE_HTTP_PORT="9000"
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
