bugfix on service discovery, and rework pf the dashboard

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -35,31 +35,6 @@ http {
         listen 80;
         server_name _;
 
-        # Welcome page at root
-        location = / {
-            root /app/welcome;
-            try_files /welcome.html =404;
-        }
-
-        # Redirect /stats to /stats/
-        location = /stats {
-            return 301 /stats/;
-        }
-
-        # VFS Statistics dashboard (React SPA)
-        location /stats/ {
-            alias /app/ui/;
-            index index.html;
-            try_files $uri $uri/ /stats/index.html;
-        }
-
-        # Static assets for stats dashboard
-        location /assets/ {
-            alias /app/ui/assets/;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-
         # API routes
         location /api/ {
             proxy_pass http://api;
@@ -96,6 +71,20 @@ http {
             proxy_connect_timeout 300;
             proxy_send_timeout 300;
             proxy_read_timeout 300;
+        }
+
+        # Static assets
+        location /assets/ {
+            alias /app/ui/assets/;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # React SPA at root (catch-all)
+        location / {
+            alias /app/ui/;
+            index index.html;
+            try_files $uri $uri/ /index.html;
         }
     }
 }
